update travis and .Rbuildignore

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,2 +1,13 @@
+# Exclude RStudio files
 ^.*\.Rproj$
 ^\.Rproj\.user$
+
+# Exclude screenshot
+img/
+
+# Exclude test suite files
+^\.travis\.yml$
+
+# Exclude GitHub stuff
+LICENSE$
+README\.md
