--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,13 @@
 Package: rxylibShiny
 Type: Package
-Title: Shiny applications for the R Package 'rxylib'
+Title: Shiny Applications for the R Package 'rxylib'
 Version: 0.0.1
 Date: 2017-09-01
 Author: Johannes Friedrich [aut, cre],
         rxylib Team [ctb]
 Authors@R: c(
-    person("Johannes", "Friedrich", role = c("aut", "cre"), email = "Johannes.Friedrich@uni-bayreuth.de")
+    person("Johannes", "Friedrich", role = c("aut", "cre"), email = "Johannes.Friedrich@uni-bayreuth.de"),
+    person(family = "rxylib Team", role = c("ctb"))
     )
 Maintainer: Johannes Friedrich <Johannes.Friedrich@uni-bayreuth.de>
 Description: A shiny application for the R package 'rxylib'.
