--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,12 @@ Depends:
 Imports:
     shiny (>= 1.0.5),
     rxylib (>= 0.2.0),
-    ggplot2 (>= 2.2.1)
+    ggplot2 (>= 2.2.1),
+    minpack.lm (>= 1.2-1),
+    broom (>= 0.4.2)
 URL: https://github.com/JohannesFriedrich/rxylibShiny
 BugReports: https://github.com/JohannesFriedrich/rxylibShiny/issues
+Collate:
+  'run_rxylib.R'
+  'rxylibShiny.R'
 RoxygenNote: 6.0.1
