--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,11 +22,17 @@ environment:
   matrix:
     - R_VERSION: devel
       R_ARCH: x64
+      USE_RTOOLS: true
+      PKGTYPE: source
 
     - R_VERSION: release
       R_ARCH: x64
+      USE_RTOOLS: true
+      PKGTYPE: source
 
     - R_VERSION: stable
+      USE_RTOOLS: true
+      PKGTYPE: source
 
 build_script:
   - travis-tool.sh install_deps
